DataPhiles state of code

--- a/scripts/eeSurv_mixedEffects.Rmd
+++ b/scripts/eeSurv_mixedEffects.Rmd
@@ -192,7 +192,8 @@ mod2 <- stan_surv(formula = Surv(age, status==2) ~
                     seed    = test_SEED,
                     iter    = test_ITER)
 
-save(mod2, file="../processed/pieceW_tve.Rda")
+#save(mod2, file="../processed/pieceW_tve.Rda")
+load("../processed/pieceW_tve.Rda")
 
 plot(mod2) + coord_cartesian(ylim = c(0, 0.1)) # basehaz
 summary(mod2)
@@ -225,8 +226,8 @@ mod3 <- stan_surv(
 # Estimates
 print(mod3, digits = 2)
 
-save(mod3, file="../processed/cageID_rand.Rda")
-
+#save(mod3, file="../processed/cageID_rand.Rda")
+load("../processed/cageID_rand.Rda")
 
 # Does the random term matter? Fixed model
 mod3_fixed <- update(mod3, formula. = Surv(
@@ -237,6 +238,7 @@ mod3_fixed <- update(mod3, formula. = Surv(
 summary(mod3_fixed)
 ps_check(mod3_fixed)
 save(mod3_fixed, file="../processed/cageID_fixed.Rda")
+load("../processed/cageID_fixed.Rda")
 
 # Calculate 'loo' (integer overflow error!!!)
 lcomp3 <- loo_compare(loo(mod3_fixed),loo(mod3))
