--- a/scripts/ee_coxph_models.Rmd
+++ b/scripts/ee_coxph_models.Rmd
@@ -8,6 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library(survival)
 library(survminer)
+library(coxme)
 library(splines) #needed by survival package
 library(tidyverse) 
 library(forcats)
@@ -18,49 +19,70 @@ library(Greg)
 
 # CoxPH models 
 
+## Summary results
+
 Assupmtion: Proportional hazards (effects of all covariates do not change over time)
 Non-PH therefore under- or overestimated risk
 
-PH assumption (i.e. residuals independent of time) violated
-Early: Adult diet interaction sig, albeit skewed residuals
-Interaction of non-PH variables with age non-convergent (diet interacts heavily with age - nothing else is significant)
-Models on age-classes not significant for either diet, but a large effect of sex.
+Looks like the simplest model (larv + adult + sex) is prefered whether the data is split by sex or not
 
-Larval treatment effect depends on adult age 
+Use this to correct the PH assumption
+
+Use this to fit a Bayesiam model
 
 
 # Data
 
 ```{r}
 eelife <- read.csv("../processed/eeAlldat.csv") %>%
-  select(-X,cageID,larv_adult,larvalTreat,adultTreat,age,status,sex)
+  select(-X,cageID,larv_adult,larvalTreat,adultTreat,age,status,sex) 
+
 ```
 
 # With a 3-way interaction
 
-cageID is sig - fit as random effect
-Sex and cageID very sig
-Non-PH in larval diet, cage and sex
+cageID always sig - fit as random effect
+Sex always sig - always include as fixed effect
+All, except adult diet non-PH
 see Fox and Weisberg (2018)
+
+cph1.2 is better (`~ larvalTreat + adultTreat + sex`)
 
 ```{r}
 # 3-way interaction (drop cageID in the interaction term)
-cph1 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + 
+cph1.0 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + 
                 sex + cageID + larvalTreat:adultTreat:sex, 
               data = eelife)
 summary(cph1)
-#ggforest(cph1, data = eelife)
 cox.zph(cph1)
-#ggcoxzph(test.cph1)
 
-```
 
-## Fit the interaction term only
+cph1.1 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + 
+                sex + cageID, data = eelife)
+summary(cph1.1)
+# There's robust effect of sex and cage, larval diet at 10% sig, 
+# adult diet nsig
 
-All 3-way interaction combis sig (due to sex??)
-cpd_var is non-PH
 
-```{r}
+cph1.2 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + 
+                sex, data = eelife)
+summary(cph1.2)
+cox.zph(cph1.2)
+# Robust effect of adult diet and sex, larval diet nsig
+
+
+cph1.3 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat,
+                data = eelife)
+summary(cph1.3)
+cox.zph(cph1.3)
+# Robust effect of adult diet, larval diet nsig
+# Meets PH assumption in all terms
+
+anova(cph1.3,cph1.2,cph1.1,cph1.0)
+# Sex and cage have valid potential effects
+# cph1.2 is more robust
+
+# Fit the interaction term only
 eelife <- eelife %>% unite(cpd_var, larv_adult, sex, 
                            sep = "_", remove = FALSE)
 
@@ -68,10 +90,13 @@ cph2 <- coxph(Surv(age, status) ~ cpd_var, data = eelife)
 summary(cph2)
 cox.zph(cph2)
 
+# All 3-way interaction combis sig (due to sex & adult diet??)
 
-# Compare models
-anova(cph1,cph2)
-## Seems to favor cph2 
+# Compare again
+anova(cph1.3,cph1.2,cph1.1,cph2)
+
+# Compared to simplest model, model with sex but no cage more robust
+# Model with 3-way interaction only similar to model with sex and cage
 ```
 
 ## cageID as random effect
@@ -81,137 +106,25 @@ Two combis involving cageID sig.
 Very non-PH
 
 ```{r}
-cph3 <- coxph(Surv(age, status) ~ cpd_var + (1 + cageID), data = eelife)
-summary(cph3)
-cox.zph(cph3)
+eelife$status <- as.numeric(eelife$status)
 
-anova(cph2,cph3)
+cph3 <- coxme(Surv(age, status) ~ cpd_var + (1 | cageID), data = eelife)
+summary(cph3)
+
+anova(cph1.3,cph1.2,cph1.1,cph2,cph3)
+
+# A random effect seems unfavored
+# 3-way interaction alone seems similar to additive model with cageID
+# Additive model with sex but no cageID most robust of all
+# Select cph1.2 (larval diet has no effect)
+
 ```
 
 
 ## Take from linear models
 1. LOOKS LIKE SEX HAS A MAJOR IMPACT - CONSIDER SEXES SEPARATELY LATER
 2. DEAL WITH NON-PH COVARIATES
-3. cageID HAS EFFECT, SO SHOULD BE CONTROLLED FOR AS RANDOM EFFECT
 4. ONLY EFFECTS APPEAR AS INTERACTION (ABSENT WHEN FITTED AS ADDITIVE)
-
-
-
-
-# Deal with the non-PH problem
-
-## Stratify the time variable for model cph3
-
-Does not correct non-PH
-
-```{r}
-hist(eelife$age)
-
-eelife$age.intv <- car::recode(eelife$age, 
-                              "lo:10=1; 
-                              11:20=2; 
-                              21:30=3; 
-                              31:40=4;
-                              41:50=5;
-                              51:60=6;
-                              61:hi=7") 
-xtabs(~ age.intv, data=eelife)
-
-cph4 <- coxph(Surv(age, status) ~ cpd_var + (1 + cageID) +
-                strata(age.intv), data=eelife)
-summary(cph4)
-
-cox.zph(cph4)
-
-```
-
-# Cox model with split-time variable
-
-Splitting at intervals  0.5 - 20: interaction still non-PH.
-Model sexes separately
-Proceed to stan_surv()
-
-```{r}
-
-# eelife <- eelife %<>% 
-#   mutate(status = factor(status),
-#         larvalTreat = factor(larvalTreat),
-#         adultTreat = factor(adultTreat),
-#         sex = factor(sex))
-
-
-# A regular cox regression
-## Requires a defined status level
-
-regular_model <- cph2
-
-
-# Now, split data set and repeat model
-
-spl_eelife <-
-  eelife %>% 
-  timeSplitter(by = 20,
-               event_var = "status",
-               event_start_status = 0,
-               time_var = "age")
-
-interval_model <-
-  update(regular_model, 
-         Surv(Start_time, Stop_time, status == 1) ~ .,
-         data = spl_eelife)
-
-summary(interval_model)
-
-# The difference between the models should be negligible:
-
-cbind(Regular = coef(regular_model),
-      Interval = coef(interval_model),
-      Difference = coef(regular_model) - coef(interval_model)) %>% 
-  txtRound(digits = 5) %>% 
-  knitr::kable(align = "r")
-
-
-# Now, look for time varying coefficients with survival::cox.zph() 
-
-cox.zph(regular_model) %>% 
-  extract2("table") %>% 
-  txtRound(digits = 2) %>% 
-  knitr::kable(align = "r")
-
-# larvalTreat and sex are time-variable
-
-
-# Update split-time model with interaction
-
-time_int_model <- 
-  update(interval_model,
-         .~.+larvalTreat:Start_time,
-         .~.+sex:Start_time)
-summary(time_int_model)
-
-cox.zph(time_int_model)
-
-ggcoxzph(sx)
-
-#ggforest(time_int_model, data = spl_eelife)
-
-ggforest(
-  time_int_model,
-  data = spl_eelife,
-  main = NULL,
-  cpositions = c(0.02, 0.22, 0.4),
-  fontsize = 0.7,
-  refLabel = "reference",
-  noDigits = 2
-)
-
-
-
-# Adjusted survival curve for cox model
-# ggadjustedcurves(regular_model, data = eelife,
-#                     variable  = eelife[, "larvalTreat"],
-#                    legend.title = "Larval Treatment", )
-```
 
 
 
@@ -224,58 +137,148 @@ Models on age-classes not significant for either diet
 
 ### Females
 
-Unsplit model: Adult treat highly sig; but adult treat has non-PH
-
-Split model: At 0.5, adult treat remains highly sig; Adult treatment depends on age very significantly; All hazards are proportional!
-
-This looks like a valid solution.
+`~ larvalTreat + adultTreat` appears adequate
 
 ```{r}
 female <- subset(eelife, eelife$sex=="F")
 
-female <- female %>% 
-  mutate(status = factor(status),
-        larvalTreat = factor(larvalTreat),
-        adultTreat = factor(adultTreat),
-        sex = factor(sex))
+fph1.0 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + 
+                cageID + larvalTreat:adultTreat:cageID, 
+              data = female)
+summary(fph1.0)
+# Only cage has effect in 2 combis
 
 
+fph1.1 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + 
+                cageID, data = female)
+summary(fph1.1)
+# Only cage has effect in 2 combis
+
+
+fph1.2 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat, 
+                data = female)
+summary(fph1.2)
+cox.zph(fph1.2)
+# Adult diet robustly sig
+
+
+fph1.3 <- coxph(Surv(age, status) ~ larv_adult, 
+                data = female)
+summary(fph1.3)
+cox.zph(fph1.3)
+# All combis sig; C_DR is robust negative effect
+
+
+fph2 <- coxme(Surv(age, status) ~ larv_adult + (1 | cageID), 
+              data = female)
+summary(fph2)
+
+
+fph2.1 <- coxme(Surv(age, status) ~ larvalTreat + adultTreat + 
+                (1 | cageID), 
+                data = female)
+summary(fph2.1)
+# Adult treat sig
+
+anova(fph1.3,fph1.2,fph1.1,fph1.0,fph2,fph2.1)
+
+# It seemms the simplest (fph1.2) is equally plausible to a model with additive cageID term(fph1.1), and one with RE on 2-way interaction (fph2)
+```
+
+### Males
+
+Again, the simplest model (`~ larvalTreat + adultTreat`) appears adequate
+
+```{r}
+male <- subset(eelife, eelife$sex=="M")
+
+mph1.0 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + 
+                cageID + larvalTreat:adultTreat:cageID, 
+              data = male)
+summary(mph1.0)
+# No effects are detectable
+
+
+mph1.1 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat + 
+                cageID, data = male)
+summary(mph1.1)
+# No detectable effects
+
+
+mph1.2 <- coxph(Surv(age, status) ~ larvalTreat + adultTreat, 
+                data = male)
+summary(mph1.2)
+cox.zph(mph1.2)
+# Adult diet robustly sig
+
+
+mph1.3 <- coxph(Surv(age, status) ~ larv_adult, 
+                data = male)
+summary(mph1.3)
+cox.zph(mph1.3)
+# Two interactions robustly sig (larv_adultC_DR and larv_adultDR_DR)
+
+
+mph2 <- coxme(Surv(age, status) ~ larv_adult + (1 | cageID), 
+              data = male)
+summary(mph2)
+# Two interactions robustly sig (larv_adultC_DR and larv_adultDR_DR)
+
+
+mph2.1 <- coxme(Surv(age, status) ~ larvalTreat + adultTreat + 
+                (1 | cageID), 
+                data = male)
+summary(mph2.1)
+# Adult treat robustly sig
+
+anova(mph1.2,mph1.1,mph1.3,mph1.0,mph2,mph2.1)
+
+# None is sig better than the simplest (mph1.2)
+# non-PH though
+
+```
+
+# Correct the preferred model for PH
+# No REs needed
+
+
+```{r}
 # Fit a regular cox model
-regular_model <- coxph(Surv(age, status == 1) ~ larvalTreat + 
+regular_modelF <- coxph(Surv(age, status) ~ larvalTreat + 
                          adultTreat, data = female)
-summary(regular_model)
-cox.zph(regular_model)
+summary(regular_modelF)
+cox.zph(regular_modelF)
 
 
 # Now, split dataset and repeat model
 
 spl_female <-
   female %>% 
-  timeSplitter(by = 0.5,
+  timeSplitter(by = 5,
                event_var = "status",
                event_start_status = 0,
                time_var = "age")
 
-interval_model <-
-  update(regular_model, 
+interval_modelF <-
+  update(regular_modelF, 
          Surv(Start_time, Stop_time, status == 1) ~ .,
          data = spl_female)
 
-summary(interval_model)
+summary(interval_modelF)
 
 
 # The difference between the models should be negligible:
 
-cbind(Regular = coef(regular_model),
-      Interval = coef(interval_model),
-      Difference = coef(regular_model) - coef(interval_model)) %>% 
+cbind(Regular = coef(regular_modelF),
+      Interval = coef(interval_modelF),
+      Difference = coef(regular_modelF) - coef(interval_modelF)) %>% 
   txtRound(digits = 5) %>% 
   knitr::kable(align = "r")
 
 
 # Now, look for time varying coefficients with survival::cox.zph() 
 
-cox.zph(regular_model) %>% 
+cox.zph(regular_modelF) %>% 
   extract2("table") %>% 
   txtRound(digits = 2) %>% 
   knitr::kable(align = "r")
@@ -285,20 +288,17 @@ cox.zph(regular_model) %>%
 
 # Update split-time model with interaction
 
-time_int_model <- 
-  update(interval_model,
+time_int_modelF <- 
+  update(interval_modelF,
          .~.+adultTreat:Start_time)
-summary(time_int_model)
+summary(time_int_modelF)
 
-sx <- cox.zph(time_int_model)
-sx
-
+cox.zph(time_int_modelF)
 #ggcoxzph(sx)
-
 #ggforest(time_int_model, data = spl_eelife)
 
 FF <- ggforest(
-  time_int_model,
+  time_int_modelF,
   data = spl_female,
   main = NULL,
   cpositions = c(0.02, 0.22, 0.4),
@@ -309,7 +309,7 @@ FF <- ggforest(
 
 FF
 
-# ggsave(FF,filename = "~/MyGithub/early_experience/Plots/Female_Greg_Forest_HR.pdf", height=3, width=6)
+ggsave(FF,filename = "~/MyGithub/early_experience/Plots/Female_Greg_Forest_HR.pdf", height=3, width=6)
 
 ```
 
@@ -325,49 +325,49 @@ This seems a satisfactory solution since we are interested in larval diet.
 
 male <- subset(eelife, eelife$sex=="M")
 
-male <- male %>% 
-  mutate(status = factor(status),
-        larvalTreat = factor(larvalTreat),
-        adultTreat = factor(adultTreat),
-        sex = factor(sex))
+# male <- male %>% 
+#   mutate(status = factor(status),
+#         larvalTreat = factor(larvalTreat),
+#         adultTreat = factor(adultTreat),
+#         sex = factor(sex))
 
 
 # Fit a regular cox model
-regular_model <- coxph(Surv(age, status==1) ~ larvalTreat + 
+regular_modelM <- coxph(Surv(age, status) ~ larvalTreat + 
                          adultTreat, data = male)
-summary(regular_model)
-cox.zph(regular_model)
+summary(regular_modelM)
+cox.zph(regular_modelM)
 
 
 # Now, split dataset and repeat model
 
 spl_male <-
   male %>% 
-  timeSplitter(by = 0.5,
+  timeSplitter(by = 5,
                event_var = "status",
                event_start_status = 0,
                time_var = "age")
 
-interval_model <-
-  update(regular_model, 
+interval_modelM <-
+  update(regular_modelM, 
          Surv(Start_time, Stop_time, status == 1) ~ .,
          data = spl_male)
 
-summary(interval_model)
+summary(interval_modelM)
 
 
 # The difference between the models should be negligible:
 
-cbind(Regular = coef(regular_model),
-      Interval = coef(interval_model),
-      Difference = coef(regular_model) - coef(interval_model)) %>% 
+cbind(Regular = coef(regular_modelM),
+      Interval = coef(interval_modelM),
+      Difference = coef(regular_modelM) - coef(interval_modelM)) %>% 
   txtRound(digits = 5) %>% 
   knitr::kable(align = "r")
 
 
 # Now, look for time varying coefficients with survival::cox.zph() 
 
-cox.zph(regular_model) %>% 
+cox.zph(regular_modelM) %>% 
   extract2("table") %>% 
   txtRound(digits = 2) %>% 
   knitr::kable(align = "r")
@@ -377,14 +377,14 @@ cox.zph(regular_model) %>%
 
 # Update split-time model with interaction
 
-time_int_model <- 
-  update(interval_model,
+time_int_modelM <- 
+  update(interval_modelM,
          .~.+larvalTreat:Start_time,
          .~.+adultTreat:Start_time)
-summary(time_int_model)
+summary(time_int_modelM)
 
-sx <- cox.zph(time_int_model)
-sx
+cox.zph(time_int_modelM)
+
 #adultTreat still non-PH
 
 #ggcoxzph(sx)
@@ -392,7 +392,7 @@ sx
 #ggforest(time_int_model, data = spl_eelife)
 
 MM <- ggforest(
-  time_int_model,
+  time_int_modelM,
   data = spl_male,
   main = NULL,
   cpositions = c(0.02, 0.22, 0.4),
@@ -402,35 +402,8 @@ MM <- ggforest(
 )
 MM
 
-ggsave(FF,filename = "~/MyGithub/early_experience/Plots/male_Greg_Forest_HR.pdf", height=3, width=6)
+ggsave(MM,filename = "~/MyGithub/early_experience/Plots/male_Greg_Forest_HR.pdf", height=3, width=6)
 ```
 
-# Diagnostics
 
-```{r}
-## Influential cases
-
-# typeof residuals on Y axis: c(“martingale”, “deviance”, “score”, “schoenfeld”, “dfbeta”, “dfbetas”, “scaledsch”, “partial”).
-# lin_mm <- ggcoxdiagnostics(time_int_model, type = "dfbeta",
-#                  linear.predictions = FALSE, ggtheme = theme_bw())
-# 
-# ggsave(lin_mm,filename = "~/MyGithub/early_experience/Plots/male_nonlinearity_test.pdf", height=5, width=9)
-
-
-### Visualize deviance residuals to check for outliers
-
-# dev_mm <- ggcoxdiagnostics(time_int_model, type = "deviance",
-#                  linear.predictions = FALSE, ggtheme = theme_bw())
-# 
-# dev_reg <- ggcoxdiagnostics(interval_model, type = "deviance",
-#                  linear.predictions = FALSE, ggtheme = theme_bw())
-# 
-# ggsave(dev_mm,filename = "~/MyGithub/early_experience/Plots/male_deviance_test.pdf", height=5, width=9)
-
-
-## Testing non-linearity
-### i.e. checking if functional form of model is correcctly specified
-
-# ggcoxfunctional(Surv(age, status==2) ~ age + log(age) + sqrt(age), data = male)
-```
 
