--- a/scripts/NewCountComparison.Rmd
+++ b/scripts/NewCountComparison.Rmd
@@ -201,5 +201,46 @@ CombinedFull$Mean <- rowMeans(CombinedFull[,7:9])
 
 ```
 
+#Graphing Mean
+```{r}
+ggplot(CombinedFull, aes(Mean, color = lvadComb)) +
+  geom_density(alpha = 0.5) +
+  coord_cartesian(xlim = c(-10, 620), ylim = c(0, 0.011)) +
+  labs(x = "Eggs", y = "Density", color = "Diet Combination", title = "Mean Density")
+
+ggplot(CombinedFull, aes(Age, Mean, color = lvadComb)) +
+  geom_line() +
+  coord_cartesian(xlim = c(-5, 60), ylim = c(0, 1250)) +
+  geom_smooth() +
+  labs(x = "Age (Days)", y = "Eggs", color = "Diet Combination", title = "Mean Counts")
+
+ggplot(CombinedFull, aes(Age, Mean, color = lvadComb)) +
+  geom_point() +
+  labs(x = "Age (Days)", y = "Eggs", color = "Diet Combination", title = "Mean Counts")
+
+ggplot(CombinedFull, aes(x = lvadComb,y = Mean, color = id))+
+  geom_boxplot(alpha = 0.5) +
+  labs(x = "Diet Combination", y = "Eggs", color = "Diet Combination", title = "Mean Diets")
+  
+ggplot(CombinedFull, aes(x = Age, y = Mean, color = lvadComb)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = F) +
+  labs(x = "Age (Days)", y = "Eggs", color = "Diet Combination", title = "Mean Line")
+
+ggplot(CombinedFull, aes(x = lvadComb, y = Mean, color = lvadComb)) +
+  geom_point() +
+  geom_jitter(width = 0.1) +
+  labs(x = "Diet Combination", y = "Eggs", color = "Diet Combination", title = "Mean Point")
+
+ggplot(CombinedFull, aes(x = lvadComb, y = log(Mean), color = lvadComb)) +
+  geom_point() +
+  geom_jitter(width = 0.05) +
+  labs(x = "Diet Combination", y = "Eggs", color = "Diet Combination", title = "Mean Log Point")
+
+ggplot(CombinedFull, aes(x = lvadComb, y = Mean, color = lvadComb)) +
+  geom_violin() +
+  labs(x = "Diet Combination", y = "Eggs", color = "Diet Combination", title = "Mean Violin")
+```
+
 
 
